--- a/AmurCore.ui
+++ b/AmurCore.ui
@@ -25,6 +25,10 @@
   <property name="windowTitle">
    <string>AmurCore</string>
   </property>
+  <property name="windowIcon">
+   <iconset>
+    <normaloff>data/images/logo.png</normaloff>data/images/logo.png</iconset>
+  </property>
   <property name="iconSize">
    <size>
     <width>22</width>
@@ -72,7 +76,7 @@
      <x>0</x>
      <y>0</y>
      <width>336</width>
-     <height>23</height>
+     <height>22</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu_File">
