--- a/AmurCore.ui
+++ b/AmurCore.ui
@@ -89,7 +89,7 @@
    </widget>
    <widget class="QMenu" name="menu_Zanya">
     <property name="title">
-     <string>&amp;Amur</string>
+     <string>&amp;Robot</string>
     </property>
     <addaction name="action_Connect"/>
     <addaction name="separator"/>
@@ -143,7 +143,7 @@
   </action>
   <action name="actionCamera">
    <property name="text">
-    <string>Camera</string>
+    <string>Camera calibration</string>
    </property>
   </action>
   <action name="action_Speech">
