--- a/network/connectdialog.ui
+++ b/network/connectdialog.ui
@@ -6,18 +6,162 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>318</width>
-    <height>77</height>
+    <width>450</width>
+    <height>367</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
+  <widget class="QGroupBox" name="robotsGroupBox">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>70</y>
+     <width>431</width>
+     <height>261</height>
+    </rect>
+   </property>
+   <property name="toolTip">
+    <string>Here you can search &amp; connect to all robots that you saved and currently available in LAN</string>
+   </property>
+   <property name="title">
+    <string>Available robots</string>
+   </property>
+   <property name="flat">
+    <bool>false</bool>
+   </property>
+   <property name="checkable">
+    <bool>false</bool>
+   </property>
+   <widget class="QTableWidget" name="robotsTableWidget">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>30</y>
+      <width>411</width>
+      <height>192</height>
+     </rect>
+    </property>
+    <property name="toolTip">
+     <string>Give name for saving, delete name for delete robot </string>
+    </property>
+   </widget>
+   <widget class="QRadioButton" name="showAll">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>230</y>
+      <width>111</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Show all</string>
+    </property>
+    <property name="checked">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QRadioButton" name="showKnown">
+    <property name="geometry">
+     <rect>
+      <x>90</x>
+      <y>230</y>
+      <width>111</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="toolTip">
+     <string>Green fields for active, gray - inactive, from DataBase</string>
+    </property>
+    <property name="text">
+     <string>Show known</string>
+    </property>
+   </widget>
+   <widget class="QRadioButton" name="showUnknown">
+    <property name="geometry">
+     <rect>
+      <x>200</x>
+      <y>230</y>
+      <width>121</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="toolTip">
+     <string>From network lookup</string>
+    </property>
+    <property name="text">
+     <string>Show unknown</string>
+    </property>
+   </widget>
+  </widget>
+  <widget class="QGroupBox" name="groupBox_2">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>10</y>
+     <width>331</width>
+     <height>61</height>
+    </rect>
+   </property>
+   <property name="title">
+    <string>Custom robot connect</string>
+   </property>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>30</y>
+      <width>71</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>IP address :</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="lineHostName">
+    <property name="geometry">
+     <rect>
+      <x>80</x>
+      <y>30</y>
+      <width>151</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="toolTip">
+     <string>Enter IP address &amp; port for connecting tocustom robot</string>
+    </property>
+    <property name="text">
+     <string>10.10.10.10</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="connectButton">
+    <property name="geometry">
+     <rect>
+      <x>240</x>
+      <y>30</y>
+      <width>80</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="toolTip">
+     <string>Connect to custom robot or to robot from table below</string>
+    </property>
+    <property name="text">
+     <string>Connect</string>
+    </property>
+   </widget>
+  </widget>
   <widget class="QDialogButtonBox" name="buttonBox">
    <property name="geometry">
     <rect>
-     <x>90</x>
-     <y>40</y>
+     <x>210</x>
+     <y>330</y>
      <width>221</width>
      <height>32</height>
     </rect>
@@ -29,34 +173,53 @@
     <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
    </property>
   </widget>
-  <widget class="QLineEdit" name="lineHostName">
+  <widget class="QGroupBox" name="networkModeGroupBox">
    <property name="geometry">
     <rect>
-     <x>160</x>
+     <x>340</x>
      <y>10</y>
-     <width>151</width>
-     <height>21</height>
+     <width>91</width>
+     <height>61</height>
     </rect>
    </property>
-   <property name="text">
-    <string>10.10.10.10</string>
+   <property name="title">
+    <string>Mode</string>
    </property>
-   <property name="alignment">
-    <set>Qt::AlignCenter</set>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>10</y>
-     <width>151</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Input the ip address :</string>
-   </property>
+   <widget class="QRadioButton" name="clientMode">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>40</y>
+      <width>61</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="toolTip">
+     <string>Run this App as Server</string>
+    </property>
+    <property name="text">
+     <string>Client</string>
+    </property>
+   </widget>
+   <widget class="QRadioButton" name="serverMode">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>20</y>
+      <width>61</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="toolTip">
+     <string>Run this App as Server</string>
+    </property>
+    <property name="text">
+     <string>Server</string>
+    </property>
+    <property name="checked">
+     <bool>true</bool>
+    </property>
+   </widget>
   </widget>
  </widget>
  <resources/>
