--- a/AmurCore.ui
+++ b/AmurCore.ui
@@ -76,7 +76,7 @@
      <x>0</x>
      <y>0</y>
      <width>336</width>
-     <height>22</height>
+     <height>23</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu_File">
@@ -98,7 +98,8 @@
     <addaction name="action_Halt"/>
     <addaction name="separator"/>
     <addaction name="actionCamera"/>
-    <addaction name="action_Speech"/>
+    <addaction name="action_Map"/>
+    <addaction name="actionRobot_Info"/>
    </widget>
    <widget class="QMenu" name="menu_About">
     <property name="title">
@@ -154,6 +155,16 @@
   <action name="action_About">
    <property name="text">
     <string>&amp;About</string>
+   </property>
+  </action>
+  <action name="action_Map">
+   <property name="text">
+    <string>&amp;Map</string>
+   </property>
+  </action>
+  <action name="actionRobot_Info">
+   <property name="text">
+    <string>Robot &amp;Info</string>
    </property>
   </action>
  </widget>
